--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,27 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --wp--preset--color--blue: #009BDE;
+  --wp--preset--color--yellow: #F5DB08;
+  --wp--preset--color--light-grey: #EBEDE8;
+  --wp--preset--color--dark-grey: #666666;
+  --wp--preset--color--dark-blue: #00516F;
+  --wp--preset--color--purple: #7B51A7;
+  --wp--preset--color--beige: #EBEADE;
+  --wp--preset--color--black: #000000;
+  --wp--preset--color--cyan-bluish-gray: #abb8c3;
+  --wp--preset--color--white: #ffffff;
+  --wp--preset--color--pale-pink: #f78da7;
+  --wp--preset--color--vivid-red: #cf2e2e;
+  --wp--preset--color--luminous-vivid-orange: #ff6900;
+  --wp--preset--color--luminous-vivid-amber: #fcb900;
+  --wp--preset--color--light-green-cyan: #7bdcb5;
+  --wp--preset--color--vivid-green-cyan: #00d084;
+  --wp--preset--color--pale-cyan-blue: #8ed1fc;
+  --wp--preset--color--vivid-cyan-blue: #0693e3;
+  --wp--preset--color--vivid-purple: #9b51e0;
+  --wp--preset--primary--font--family: "Lato", serif;
+  --wp--preset--secondary--font--family: "Montserrat", serif;
+  --wp--preset--tertiary--font--family: "Hind", serif;
+  --wp--preset--quaternary--font--family: "Open Sans", serif;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -9,14 +29,113 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+*::-webkit-scrollbar {
+  width: 0;
+  };
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+html,
+body,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+form,
+fieldset,
+input,
+textarea,
+p,
+blockquote,
+th,
+td,
+header,
+footer,
+aside,
+nav,
+article,
+figure,
+figcaption {
+	margin: 0;
+	padding: 0;
+}
+
+fieldset,
+img {
+	border: 0;
+}
+
+address,
+caption,
+cite,
+code,
+dfn,
+em,
+strong,
+th,
+var {
+	font-style: normal;
+	font-weight: 400;
+}
+
+ol,
+ul {
+	list-style: none;
+}
+
+caption,
+th {
+	text-align: left;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: 100%;
+	font-weight: 400;
+}
+
+q:before,
+q:after {
+	content: '';
+}
+
+abbr,
+acronym {
+	border: 0;
+}
+
+a {
+	text-decoration: none;
+}
+
+body {
+  margin: 0 auto;
+}
+
+a:active,
+a:focus {
+	outline: none;
 }
