--- a/frontend/src/widgets/navbar/Navbar.module.css
+++ b/frontend/src/widgets/navbar/Navbar.module.css
@@ -4,10 +4,36 @@
     height: fit-content;
 }
 
+.activeLink {
+    background-color: white;
+    text-decoration: none;
+    color: var(--wp--preset--color--purple);
+    margin-bottom: 15px;
+    padding: 10px 0;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 10px;
+}
+
 .link {
     text-decoration: none;
-    color: black;
-    margin-bottom: 10px;
+    color: white;
+    margin-bottom: 15px;
     padding: 10px 0;
-    border: 1px solid black;
+    border: 0.5px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+@media (min-width: 490px) and (max-width: 790px) {
+
+}
+
+@media (min-width: 320px) and (max-width: 490px) {
+    .navbarBox {
+        width: 100%;
+        flex-direction: row;
+        height: 10vh;
+        justify-content: space-between;
+    }
 }
