--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -1,20 +1,49 @@
 .layoutBox {
     height: 100vh;
+    display: flex;
 }
 
 .content {
-    display: flex;
-    justify-content: space-between;
-    height: 85vh;
+    background-color: #e8eefa15;
+    width: 75%;
 }
 
 .navbar {
-    width: 25%;
+    width: 20%;
+    height: 100%;
     padding: 20px;
-    border-right: 1px solid black;
+    background: var(--wp--preset--color--background--gradient--2);
+    box-shadow: rgba(50, 50, 105, 0.31) 0px 2px 5px 0px, rgba(0, 0, 0, 0.138) 0px 1px 1px 0px;
 }
 
 .pages {
     padding: 20px;
-    width: 75%;
+}
+
+@media (min-width: 490px) and (max-width: 790px) {
+
+}
+
+@media (min-width: 320px) and (max-width: 490px) {
+    .layoutBox {
+        flex-direction: column-reverse;
+        width: 100vw;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .navbar {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 10vh;
+        background: var(--wp--preset--color--background--gradient);
+    }
+    .logoVisibility {
+        display: none;
+    }
 }
