--- a/frontend/src/widgets/UpdatesCard/UpdatesCard.module.css
+++ b/frontend/src/widgets/UpdatesCard/UpdatesCard.module.css
@@ -1,5 +1,32 @@
-.cardBox {
-    border: 1px solid black;
+.updatesCardBox {
     margin-bottom: 20px;
     padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+}
+
+.updatesCardTitle {
+    font-size: 18px;
+
+}
+.updatesCardDate {
+    font-size: 12px;
+    margin: 10px 0;
+    color: #596674;
+}
+.updatesCardSummary {
+    font-size: 14px;
+}
+.updatesCardBox {
+
+}
+.updatesCardLink {
+    font-size: 12px;
+    margin: 10px 0;
+    color: #596674;
+}
+
+.updatesCardLink:hover {
+    color: #6b97c7;
 }
