--- a/frontend/src/widgets/header/Header.module.css
+++ b/frontend/src/widgets/header/Header.module.css
@@ -1,25 +1,39 @@
 .headerBox {
-    border: 1px solid black;
+    width: 100%;
     padding: 20px;
-    justify-content: space-between;
-}
-
-.logo, .userProfile, .headerBox {
+    height: 8vh;
+    min-height: 50px;
     display: flex;
     align-items: center;
+    border-bottom: 1px solid lightgray;
 }
 
-.logo img {
-    border: 1px dashed green;
-    width: 50px;
-    height: auto;
-    margin-right: 20px;
+.title {
+    color: white;
+    text-align: center;
 }
 
-.userImg {
-    width: 40px;
-    height: 40px;
-    background-color: black;
-    border-radius: 50%;
-    margin-right: 20px;
+.userProfile {
+    margin-right: 0;
+}
+
+.logoVisibility {
+    display: none;
+}
+
+@media (min-width: 490px) and (max-width: 790px) {
+
+}
+
+@media (min-width: 320px) and (max-width: 490px) {
+    .headerBox {
+        position: fixed;
+        top: 0;
+        background-color: white;
+        padding: 5px;
+    }
+
+    .logoVisibility {
+        display: block;
+    }
 }
