--- a/frontend/src/widgets/profileCard/ProfileCard.module.css
+++ b/frontend/src/widgets/profileCard/ProfileCard.module.css
@@ -1,51 +1,44 @@
 /* Card Container */
 .pfc {
-    width: 800px; 
-    margin: 20px auto;
+    width: 100%; 
+    min-width: 130px;
     border-radius: 12px;
     background: #f4f4f9;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
     display: flex; 
-    flex-direction: row; 
+    flex-direction: column; 
     align-items: center; 
-    height: 450px;
-}
-
-/* Profile Section */
-.profileSection {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 20px;
-    padding-top: 20px; 
-    flex-grow: 0; 
+    min-height: 400px;
+    padding: 10px;
 }
 
 /* Profile Image */
 .profileCardImg {
     display: block;
-    margin: 0; 
-    height: 160px;
-    width: 160px;
+    aspect-ratio: 1;
+    width: 90px;
     border-radius: 50%;
-    border: 4px solid white;
+    border: 3px solid white;
     object-fit: cover;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-/* Profile Title and Details */
-.profileTitle, .profileDetails {
-    text-align: center;
-    margin-top: 5px;
+.profileTitleWrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 
 /* Employee Name, Department, and Title */
 .profileTitle {
-    font-size: 10px; 
+    font-size: 15px; 
     font-weight: bold;
     color: #343a40;
-    margin-left: 20px;
+    text-align: center;
+    margin-top: 15px;
+    height: 60px;
 }
 
 /* Profile Details */
@@ -56,35 +49,35 @@
 
 /* Vertical Line */
 .vl {
-    margin: 20px;
-    border-left: 2px solid #ddd;
-    height: 200px;
-    width: 0;
+    margin: 10px 0;
+    border-bottom: 2px solid #ddd;
+    width: 100%;
     flex-grow: 0; 
-    margin-left: 50px; 
 }
 
 /* Card Body */
 .bawdy {
+    width: 100%;
     text-align: left;
-    margin: 20px;
-    font-size: 16px;
-    line-height: 1.6;
+    margin: 10px 10px;
+    font-size: 14px;
     color: #555555;
-    flex-grow: 1; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.btn2 {
-    margin-top: 345px; /* Adds space between profile details and button */
-    margin-right: 200px;
-    width: 100px;
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #205fff; /* Button color */
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.textWrap {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    height: 50px;
 }
+
+.textWrap:last-child {
+    font-size: 12px;
+}
+
 
 
        
