--- a/frontend/src/pages/dashboard/Dashboard.module.css
+++ b/frontend/src/pages/dashboard/Dashboard.module.css
@@ -1,24 +1,39 @@
 .dashboardBox {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
+    background-color: #ECF0F7;
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
 
-.newsBox {
-    width: 80%;
+.updateBox {
+    width: 100%;
+    height: calc(100vh - 300px);
+    overflow-y: scroll;
 }
 .newsBox, .eventsBox {
     padding: 20px;
 }
 
+.newsBox {
+    height: 80vh;
+    overflow-y: scroll;
+}
+
 .eventsBox {
-    width: 360px;
+    width: 340px;
 }
 
 .dashTitles {
-    margin-bottom: 20px;
+    margin: 10px 0;
     font-size: 1.2em;
     color: var(--wp--preset--color--blue);
+}
+
+.dashCalendar {
+    width: 300px;
+    height: 300px;
 }
 
 @media (min-width: 490px) and (max-width: 790px) {
