--- a/frontend/src/pages/resources/ResourcesPage.module.css
+++ b/frontend/src/pages/resources/ResourcesPage.module.css
@@ -1,3 +1,14 @@
+.resourcesPage {
+    padding: 20px;
+    background-color: #ECF0F7;
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+.resourceCardBox {
+    height: calc(90vh - 60px);
+    overflow-y: scroll;
+}
+
 .dashTitles {
     margin-bottom: 20px;
     font-size: 1.2em;
