--- a/frontend/src/widgets/userProfileCard/UserProfileCard.module.css
+++ b/frontend/src/widgets/userProfileCard/UserProfileCard.module.css
@@ -2,13 +2,11 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    position: absolute;
-    top: 10px;
-    right: 20px;
     background: #fff;
     padding: 8px 12px;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    margin-right: 15px;
   }
   
   .userProfileImage {
