--- a/frontend/src/pages/dashboard/Dashboard.module.css
+++ b/frontend/src/pages/dashboard/Dashboard.module.css
@@ -36,15 +36,26 @@
     height: 300px;
 }
 
-@media (min-width: 490px) and (max-width: 790px) {
+@media (min-width: 490px) and (max-width: 1024px) {
     .dashboardBox {
         flex-direction: column;
-        overflow-y: scroll;
-    }
-    .newsBox, .eventsBox {
-        width: 100%;
-        padding: 5px;
-        margin: 0 auto;
+        justify-content: center;
+        height: 100%;
+        }
+
+        .newsBox {
+            height: 100%;
+            overflow-y: visible;
+        }
+
+        .eventsBox {
+           width: 100%;
+           height: 100%;
+            overflow-y: visible;
+        }
+    
+    .dashCalendar {
+        display: none;
     }
 
 }
