--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -11,6 +11,7 @@
 }
 
 .navbar {
+    z-index: 2;
     width: 20%;
     height: 100vh;
     padding: 20px;
@@ -23,7 +24,35 @@
     height: 90vh;
 }
 
-@media (min-width: 490px) and (max-width: 790px) {
+@media (min-width: 490px) and (max-width: 1024px) {
+    .layoutBox {
+        /* flex-direction: column-reverse; */
+        width: 100vw;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 90vh;
+    }
+    
+    .navbar {
+        height: 10vh;
+        position: fixed;
+        bottom: 0;
+        width: 100vw;
+        height: fit-content;
+        padding: 0;
+        background: var(--wp--preset--color--background--gradient);
+    }
+
+    .pages {
+        height: 80vh;
+    }
+    .logoVisibility {
+        display: none;
+    }
 
 }
 
@@ -42,10 +71,19 @@
     .navbar {
         position: fixed;
         bottom: 0;
-        width: 100%;
-        height: 10vh;
+        width: 100vw;
+        height: fit-content;
+        padding: 0;
         background: var(--wp--preset--color--background--gradient);
+        height: 10vh;
     }
+
+    .pages {
+        height: 81vh;
+        position: fixed;
+        top: 10vh;
+    }
+
     .logoVisibility {
         display: none;
     }
