--- a/frontend/src/pages/resources/ResourcesPage.module.css
+++ b/frontend/src/pages/resources/ResourcesPage.module.css
@@ -1,4 +1,5 @@
 .resourcesPage {
+    width: 100%;
     padding: 20px;
     background-color: #ECF0F7;
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
@@ -13,4 +14,22 @@
     margin-bottom: 20px;
     font-size: 1.2em;
     color: var(--wp--preset--color--blue);
+}
+
+@media (min-width: 490px) and (max-width: 1024px) {
+    .resourcesPage {
+    }
+    
+    .resourceCardBox {
+        /* min-width: 490px; */
+        max-width: 1024px;
+        width: 90%;
+    }
+
+}
+
+@media (min-width: 320px) and (max-width: 490px) {
+    .resourceCardBox {
+
+    }
 }
