--- a/frontend/src/widgets/logo/Logo.module.css
+++ b/frontend/src/widgets/logo/Logo.module.css
@@ -14,3 +14,16 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
 }
+
+@media (min-width: 490px) and (max-width: 1024px) {
+    .logoBox img {
+        width: 9vh;
+    }
+
+}
+
+@media (min-width: 320px) and (max-width: 490px) {
+    .logoBox img {
+        width: 8vh;
+    } 
+}
