--- a/frontend/src/pages/directory/Directory.module.css
+++ b/frontend/src/pages/directory/Directory.module.css
@@ -1,20 +1,48 @@
 .directoryBox {
+    width: 100%;
     padding: 20px;
     background-color: #ECF0F7;
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
+
 .userCardBox {
     display: grid;
-    grid-template-columns: repeat(3, 200px);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: repeat(auto, 250px);
     gap: 50px;
     margin-top: 20px;
-    height:calc(90vh - 200px);
+    height: calc(90vh - 200px);
     overflow-y: scroll;
 }
 
 .dashTitles {
+    font-family: "Open Sans", serif;
     margin-bottom: 20px;
     font-size: 1.2em;
     color: var(--wp--preset--color--blue);
+}
+
+@media (min-width: 490px) and (max-width: 1024px) {
+    .directoryBox {
+        position: fixed;
+        top: 10vh;
+    }
+
+    .userCardBox {
+        max-width: 1024px;
+        height: calc(80vh - 190px);
+    }
+
+}
+
+@media (min-width: 320px) and (max-width: 490px) {
+    .resourceCardBox {
+        height: calc(90vh - 140px);
+
+    }
+
+    .userCardBox {
+        max-width: 1024px;
+        height: calc(80vh - 190px);
+    }
 }
