--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -3,3 +3,15 @@
     background-color: #ECF0F7;
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
+
+@media (min-width: 490px) and (max-width: 1024px) {
+    .chatBox {
+        padding: 0px;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 490px) {
+    .chatBox {
+        padding: 0px;
+    }
+}
