--- a/frontend/src/widgets/UpdatesCard/UpdatesCard.module.css
+++ b/frontend/src/widgets/UpdatesCard/UpdatesCard.module.css
@@ -8,19 +8,21 @@
 
 .updatesCardTitle {
     font-size: 18px;
-
+    font-family: "Lato", serif;
+    color: var(--wp--preset--color--dark-blue);
 }
+
 .updatesCardDate {
     font-size: 12px;
     margin: 10px 0;
     color: #596674;
 }
+
 .updatesCardSummary {
     font-size: 14px;
+    font-family: "Hind", serif;
 }
-.updatesCardBox {
 
-}
 .updatesCardLink {
     font-size: 12px;
     margin: 10px 0;
