--- a/frontend/src/widgets/eventCard/EventCard.module.css
+++ b/frontend/src/widgets/eventCard/EventCard.module.css
@@ -8,19 +8,23 @@
 
 .eventCardTitle {
     font-size: 18px;
-
+    font-family: "Lato", serif;
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--wp--preset--color--cyan-bluish-gray);
 }
+
 .eventCardDate {
     font-size: 12px;
     margin: 10px 0;
-    color: #596674;
+    color: var(--wp--preset--color--purple);
 }
+
 .eventCardSummary {
     font-size: 14px;
+    font-family: "Hind", serif;
+    color: #4d6e91;
 }
-.eventCardBox {
 
-}
 .eventCardLink {
     font-size: 12px;
     margin: 10px 0;
