--- a/frontend/src/widgets/resourceCard/ResourceCard.module.css
+++ b/frontend/src/widgets/resourceCard/ResourceCard.module.css
@@ -21,16 +21,22 @@
     font-size: 10px;
     padding: 5px 10px;
     border-radius: 8px;
-    margin-bottom: 20px;
+    font-family: "Montserrat", serif;
+    font-weight: 500;
 }
 
 .resourceCardBox h2 {
+    border-top: 2px solid var(--wp--preset--color--light-grey);
+    padding-top: 20px;
+    font-family: "Lato", serif;
+    font-weight: 500;
     font-size: 1.4em;
     color: var(--wp--preset--color--dark-blue);
 }
 
 .resourceCardBox p {
-    font-size: 1.2em;
+    font-family: "Hind", serif;
+    font-size: 1.1em;
     color: var(--wp--preset--color--dark-grey);
 }
 
@@ -48,14 +54,12 @@
         font-size: 1.2em;
         text-align: start;
     }
-    
+
     .resourceCardBox p {
         font-size: 1em;
         color: var(--wp--preset--color--dark-grey);
     }
-    
-}
-
-@media (min-width: 320px) and (max-width: 490px) {
 
 }
+
+@media (min-width: 320px) and (max-width: 490px) {}
