--- a/frontend/src/widgets/userProfileCard/UserProfileCard.module.css
+++ b/frontend/src/widgets/userProfileCard/UserProfileCard.module.css
@@ -7,6 +7,8 @@
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     margin-right: 15px;
+    height: fit-content;
+    width: fit-content;
   }
   
   .userProfileImage {
@@ -20,5 +22,6 @@
     font-size: 16px;
     font-weight: 500;
     color: #333;
+    font-family: "Open Sans", serif;
   }
   
